name:                go
version:             0.1.0.0
synopsis:            Go, the abstract strategy board game but with an extended ruleset
homepage:            https://github.com/jumper149/go
license:             BSD3
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
category:            Game, Web
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     Go.Board.Default
                       Go.Board.Loop
                       Go.Game.End
                       Go.Game.Game
                       Go.Game.Playing
                       Go.Game.Rules
                       Go.Game.State
                       Go.Run.Client.JSONTerm
                       Go.Run.Server.JSON
                       Go.Run.Term
  build-depends:       base >=4.12 && <4.13
                     , mtl
                     , transformers
                     , containers
                     , vector
                     , aeson
                     , http-client
                     , servant-client
                     , servant-server
                     , warp
  default-extensions:  DeriveGeneric
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , ScopedTypeVariables
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable go
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
                     , go-backend
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:         -Wall

executable bridge
  main-is:             Bridge.hs
  build-depends:       base >=4.12 && <4.13
                     , purescript-bridge
                     , go-backend
  default-extensions:  DataKinds
  hs-source-dirs:      bridge
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  other-modules:       Test.Board.Default
  build-depends:       base >=4.12 && <4.13
                     , hspec
                     , QuickCheck
                     , go-backend
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
