name:                go
version:             0.1.0.0
synopsis:            Go, the abstract strategy board game but with an extended ruleset
homepage:            https://github.com/jumper149/go
license:             BSD3
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
category:            Game, Web
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Go.Board.Default
                         Go.Board.Loop
                         Go.Config
                         Go.Game.End
                         Go.Game.Game
                         Go.Game.Player
                         Go.Game.Playing
                         Go.Game.Rules
                         Go.Game.State
                         Go.Run.JSON
                         Go.Run.Term
    build-depends:       base
                       , mtl
                       , transformers
                       , containers
                       , vector
                       , aeson
    default-extensions:  DataKinds
                       , DeriveGeneric
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , MultiParamTypeClasses
                       , ScopedTypeVariables
    default-language:    Haskell2010
    ghc-options:         -Wall

executable server
  main-is:             Main.hs
  if impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      server
    build-depends:       base
                       , go
                       , aeson
                       , mtl
                       , servant-server
                       , warp
    default-extensions:  DataKinds
                       , DeriveGeneric
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , MultiParamTypeClasses
                       , ScopedTypeVariables
    default-language:    Haskell2010
    ghcjs-options:       -Wall

executable client
  main-is:             Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      client
    other-modules:       Board.Default
                         Game
                         Model
                         Operation
                         Player
    build-depends:       base
                       , go
                       , miso
                       , containers
                       , vector
    default-extensions:  DataKinds
                       , DeriveGeneric
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , MultiParamTypeClasses
                       , ScopedTypeVariables

                       , OverloadedStrings
    default-language:    Haskell2010
    ghcjs-options:       -Wall -dedupe

executable term
  main-is:             Main.hs
  if impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      term
    build-depends:       base
                       , go
    default-language:    Haskell2010
    ghc-options:         -Wall

test-suite test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  if impl(ghcjs)
      buildable: False
  else
    hs-source-dirs:      test
    other-modules:       Test.Board.Default
    build-depends:       base
                       , go
                       , hspec
                       , QuickCheck
    default-language:    Haskell2010
    ghc-options:         -Wall
