name:                go
version:             0.1.0.0
homepage:            https://github.com/jumper149/go
license:             BSD3
license-file:        LICENSE
author:              Felix Springer
maintainer:          felixspringer149@gmail.com
category:            Game, Web
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Go.Board
                         Go.Board.Default
                         Go.Board.Loop
                         Go.Config
                         Go.Game
                         Go.Game.Act
                         Go.Game.End
                         Go.Game.Game
                         Go.Game.Player
                         Go.Game.Rules
                         Go.Game.State
                         Go.Message
                         Go.Player
                         Go.Representation
                         Go.Run.JSON
    build-depends:       base
                       , aeson
                       , containers
                       , data-default-class
                       , finite-typelits
                       , mtl
                       , vector-sized
    default-extensions:  DataKinds
                       , DeriveGeneric
                       , FlexibleContexts
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , KindSignatures
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TypeApplications
                       , TypeFamilies
    default-language:    Haskell2010
    ghc-options:         -Wall

executable server
  main-is:             Main.hs
  if impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      server
    other-modules:       API
                         Clients
                         Clients.Class
                         Clients.Internal
                         GameSet
                         GameSet.Class
                         GameSet.Internal
                         Html
                         Message
                         Server
                         ServerState
                         ServerState.Class
                         ServerState.Message
                         WebSocket
    build-depends:       base
                       , go
                       , wai-transformers
                       , aeson
                       , bytestring
                       , containers
                       , data-default-class
                       , directory
                       , http-types
                       , lucid
                       , monad-control
                       , mtl
                       , servant-lucid
                       , servant-rawm
                       , servant-server
                       , text
                       , transformers
                       , transformers-base
                       , wai
                       , wai-extra
                       , wai-websockets
                       , warp
                       , websockets
    default-extensions:  DataKinds
                       , DeriveGeneric
                       , FlexibleContexts
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , KindSignatures
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TypeApplications
                       , TypeFamilies
    default-language:    Haskell2010
    ghcjs-options:       -Wall

executable client
  main-is:             Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      client
    other-modules:       Game.Board.Default
                         Game.Model
                         Game.Operation
                         Game.Player
                         Game.Run
                         Game.Svg
                         Message
                         Model
                         Operation
    build-depends:       base
                       , go
                       , miso
                       , containers
                       , data-default-class
                       , vector-sized
    default-extensions:  DataKinds
                       , DeriveGeneric
                       , FlexibleContexts
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , KindSignatures
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TypeApplications
                       , TypeFamilies
    default-language:    Haskell2010
    ghcjs-options:       -Wall -dedupe

test-suite test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  if impl(ghcjs)
      buildable: False
  else
    hs-source-dirs:      test
    other-modules:       Test.Board.Default
    build-depends:       base
                       , go
                       , data-default-class
                       , hspec
                       , QuickCheck
    default-extensions:  DataKinds
                       , DeriveGeneric
                       , FlexibleContexts
                       , FlexibleInstances
                       , GeneralizedNewtypeDeriving
                       , KindSignatures
                       , MultiParamTypeClasses
                       , OverloadedStrings
                       , ScopedTypeVariables
                       , StandaloneDeriving
                       , TypeApplications
                       , TypeFamilies
    default-language:    Haskell2010
    ghc-options:         -Wall

library wai-transformers
  if impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:      wai-transformers
    exposed-modules:     Control.Monad.Trans.Control.Identity
                         Network.Wai.Trans
                         Network.Wai.Handler.WebSockets.Trans
    build-depends:       base
                       , monad-control
                       , transformers
                       , transformers-base
                       , wai
                       , wai-websockets
                       , websockets
    default-language:    Haskell2010
    ghc-options:         -Wall
